# quran-srs

./: .coveragerc  .env.example  .formatter.exs  .gitignore  .pylintrc  .sesskey  AGENTS.md  CLAUDE.md  POSTGRES_MIGRATION_GUIDE.md  QUICK_TEST.md  README.md  admin.py  all_pages.yaml  code-review-feedback.md  common_function.py  constants.py  database.py  dev_log.md  extract_schema.py  globals.py  globals_pg.py  main.py  manage.py  mix.exs  new_memorization.py  nixpacks.toml  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  pytest.ini  recent_review.py  requirements.txt  revision.py  srs.py  test_extract.py  test_postgres_migration.py  users.py  utils.py  (+1 more)
.claude/: CLAUDE.global.md  settings.json
_reference/: main.py  utils.py
app/: admin.py  admin_controller.py  admin_model.py  admin_view.py  app_setup.py  common_function.py  common_model.py  common_view.py  fixed_reps.py  fixed_reps_service.py  flexible_reps.py  globals.py  hafiz.py  hafiz_controller.py  hafiz_model.py  hafiz_service.py  hafiz_test.py  hafiz_view.py  home_controller.py  home_view.py  middleware.py  new_memorization.py  page_details.py  page_details_controller.py  page_details_model.py  page_details_view.py  profile.py  profile_controller.py  profile_model.py  profile_view.py  recent_review.py  revision.py  revision_controller.py  revision_model.py  revision_view.py  srs.py  srs_interval_calc.py  srs_reps.py  srs_reps_service.py  users_controller.py  (+4 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
core_app/: admin.py  apps.py  consecutive_pages.py  (+8 more)
(+284 files in other folders)
